styles.css
/* ... */
input[type=search] {
  -webkit-appearance:textfield;
  box-sizing:content-box
}

input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration {
  -webkit-appearance:none
}

fieldset {
  border:1px solid silver;
  margin:0 2px;
  padding:.35em .625em .75em
}

legend {
  border:0;
  padding:0
}

textarea {
  overflow:auto
}

optgroup {
  font-weight:700
}

table {
  border-collapse:collapse;
  border-spacing:0
}

td,th {
  padding:0
}

@font-face {
    font-family: 'gidoleregular';
    src: url('fonts/gidole-regular.woff2') format('woff2'),
         url('fonts/gidole-regular.woff') format('woff'),
         url('fonts/gidole-regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'gidolinyaregular';
    src: url('fonts/gidolinya-regular.woff2') format('woff2'),
         url('fonts/gidolinya-regular.woff') format('woff'),
         url('fonts/gidolinya-regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

html {
  font-family:gidoleregular,sans-serif;
  text-rendering: optimizeLegibility;
}
noscript {
  position:fixed;
  z-index:100;
  background-color:#933100;
  color:#fff;
  width:100%
}
.wrapper {
  max-width:760px;
  margin:0 auto;
  box-sizing:border-box;
  padding:80px 30px 10vw
}
input[type=checkbox],input[type=radio] {
  vertical-align:middle;
  position:relative;
  bottom:2px
}
.no-select {
  -webkit-user-select:none;
     -moz-user-select:none;
      -ms-user-select:none;
          user-select:none
}
.text-center {
  text-align:center
}
a {
  text-decoration:none
}

/*SOCIAL*/
.social {
  height:50px;
  margin-bottom: -50px;
  line-height: 0px;
  z-index: 100;
}
.social div div {
  display: inline-block
}
.social div div:not(:first-child) {
  padding-left: 20px;
}
.social span {
  line-height: 40px;
}
.social svg {
  width:40px;
  transition: width 0.2s linear 0s;
}
.social.fixed{  
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 40px;
  margin: 0;
  padding: 0;
}
.social.fixed svg {
  width:20px;
}
.social.fixed div div:not(:first-child) {
  padding-left: 10px;
  transition: padding-left 0.2s linear 0s;
}

.social.fixed span {
  display: none;
}
.socialwrap {
  max-width:760px;
  margin:0 auto;
  padding: 10px 30px;
  box-sizing:border-box;
  display: block;
  height: 40px;
  border-bottom-right-radius: 50% 4px;
  border-bottom-left-radius: 50% 4px;  
}
.fixed .socialwrap {
  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
}
.social .settings {
  float: right;
  visibility: hidden;
  transition: visibility 0s linear 0s;
  width: 50px;
  margin-left: -50px;
  padding-left: 0 !important;
}
.social.fixed .settings {
  visibility: visible;
  cursor: pointer;
}
.social .settings svg {
  opacity: 0;
}
.social.fixed .settings svg {
  transition: opacity 0.8s cubic-bezier(.6, 0, .4, 1) .3s;
  opacity: 1;
}
#navbg {
  height: 40px;
  margin: -40px 0;
  background-color: white;
}




/*COLORS*/
html {
  color:hsl(200, 11%, 35%);
  background-color:#fff;
}
a {
    color:hsl(200, 100%, 45%);
}
h1 {
  color:hsl(200, 17%, 15%)
}
h2,h3 {
  color:hsl(200, 14%, 25%)
}
.comment, .charmap {
  color:hsl(200, 8%, 59%)
}
.social.fixed {
  background-color: #fff;
  border-bottom: 1px solid #fff;
}
.social path {
  fill:hsl(200, 9%, 59%)
}
.screenshots .slick-prev::before, 
.screenshots .slick-next::before {
  color:hsl(200, 11%, 35%);
}
.screenshots .slick-prev:hover:before, 
.screenshots .slick-prev:focus:before, 
.screenshots .slick-next:hover:before, 
.screenshots .slick-next:focus:before,
.defaulticon svg:hover path, 
.defaulticon svg:focus path {
  fill:hsl(200, 14%, 25%);
  color:hsl(200, 14%, 25%);    
}
.twittericon:hover path,
.twittericon:focus path {
  fill:#55acee !important;
}
.facebookicon:hover path,
.facebookicon:focus path {
  fill:#3b5998 !important;
}
.googleicon:hover path,
.googleicon:focus path {
  fill:#dd4b39 !important;
}
.pinteresticon:hover path,
.pinteresticon:focus path {
  fill:#cc2127 !important;
}
.behanceicon:hover path,
.behanceicon:focus path {
  fill:#1769ff !important;
}

::-moz-selection {
  background-color:#0098E5;
  color:#fff
}

::selection {
  background-color:#0098E5;
  color:#fff
}


/*Typography*/
body {
  font-size:3.2654vw;
  line-height:1.5em;
}

h1,h2,h3 {
  font-weight:400
}

h1 {
  line-height:108px;
  margin-top:72px;
  margin-bottom:36px;
  font-size:35vw;
}

h2, .charmap {
  letter-spacing:-.03em;
  font-size:8.5709vw;
  line-height:1.2em;
  margin-top:1.18em;
  margin-bottom:-.66em;
  margin-left: -0.03em;
}
.charmap {
  margin-bottom: 1em;
}

h3 {
  letter-spacing:-.01em;
  font-size:5.3065vw;
  line-height:1.8461538462em;
  margin-top:1.24em;
  margin-bottom:-1.24em;
  margin-left: -0.02em;  
}

blockquote,ol,p,pre,table,ul {
  margin-top:1.5em;
  margin-bottom:1.5em;
}

.reduced {
  letter-spacing: -0.07em;
}

.strike {
  text-decoration: line-through;
}



/*THEMES*/
.play {
  font-family:gidolinyaregular;
}
.dark .social.fixed {
  background-color: #000;
  border-bottom: 1px solid black;
}
.dark,
.dark .social path,
.dark .screenshots .slick-prev::before, 
.dark .screenshots .slick-next::before {
  color:hsl(200, 5%, 65%);
  fill:hsl(200, 5%, 65%);
  background-color:#000;
}
.dark a {
  color:hsl(200, 100%, 40%);
}
.dark .screenshots .slick-prev:hover:before, 
.dark .screenshots .slick-prev:focus:before, 
.dark .screenshots .slick-next:hover:before, 
.dark .screenshots .slick-next:focus:before,
.dark .defaulticon svg:hover path, 
.dark .defaulticon svg:focus path {
  fill:hsl(200, 50%, 95%);
  color:hsl(200, 50%, 95%);
}

.dark h1 {
  color:hsl(200, 50%, 95%);
}
.dark h2, .dark h3 {
  color:hsl(200, 10%, 77%);
}
.dark .comment, .dark .charmap {
  color:hsl(200, 14%, 25%)
}

.dark .jumbotron:before {
  background-image:linear-gradient(to top,rgba(0,0,0,1) 0%,rgba(0,0,0,.95) 4%,rgba(0,0,0,.8) 8%,rgba(0,0,0,.5) 12%,rgba(0,0,0,.2) 16%,rgba(0,0,0,.05) 20%,rgba(0,0,0,0) 24%,rgba(0,0,0,0) 100%);
  
}
/* ... */

